# genesis

./: README.md
kernel/: Cargo.toml  build.rs  gdb_script  target.json
kernel/boot/: boot.lds  build.rs  target.json
kernel/boot/.helix/: languages.toml
kernel/boot/src/: main.S  main.rs
kernel/core/: Cargo.toml  TODO.md  build.rs  core.lds  kernel.lds  target.json
kernel/core/.cargo/: config.toml
kernel/core/src/: executor.rs  interrupts.rs  main.rs  mm.rs  pci.rs  pic8259.rs  sync.rs  uart.rs  utils.rs
kernel/core/src/executor/: async_event.rs  mod.rs
kernel/core/src/hw/: dma.rs  interrupts.rs  mod.rs  nic.rs  pci.rs  uart.rs
kernel/core/src/mem/: allocator_utils.rs  mod.rs  page_alloc.rs  phys_alloc.rs
kernel/core/src/utils/: callback_chain.rs  mod.rs  write_once.rs
kernel/hal/: Cargo.toml
kernel/hal/src/: insn.rs  lib.rs  mem.rs  mmio_regs.rs  sys.rs  uart.rs
kernel/hal/src/mmio/: gt64120.rs  mod.rs  piix4.rs  uart.rs
kernel/loader/: Cargo.toml  build.rs  loader.lds  target.json
kernel/loader/.cargo/: config.toml
kernel/loader/src/: boot.S  main.rs
kernel/loader_shared/: Cargo.toml
kernel/loader_shared/src/: lib.rs
kernel/scripts/: tap_ifup.sh
kernel/src/: gdb_script  main.rs
kernel/xtask/: Cargo.toml
kernel/xtask/src/: main.rs
