[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitpiece = "0.1.7"
const_for = "0.1.5"
hal = { path = "../hal" }
paste = "1.0.15"
spin = "0.9.8"
static_assertions = "1.1.0"
volatile = "0.6.1"

[profile.release]
debug = true
strip = "none"
lto = true

[profile.dev]
debug = true
strip = "none"
